[gd_scene load_steps=10 format=3 uid="uid://breqbi4igpsij"]

[ext_resource type="Script" path="res://Scripts/op.gd" id="1_68r0h"]
[ext_resource type="Texture2D" uid="uid://bdswkkia6q3wb" path="res://Assets/Sprites/Screen.png" id="2_r8sxu"]
[ext_resource type="FontFile" uid="uid://3h073fjh4f3g" path="res://Assets/Fonts/Hardpixel.OTF" id="3_33sef"]
[ext_resource type="AudioStream" uid="uid://c64slmu34evyt" path="res://Assets/Sounds/button_click.ogg" id="4_hyx1v"]
[ext_resource type="AudioStream" uid="uid://x0n8e0p8jdex" path="res://Assets/Sounds/ui_interact.ogg" id="5_g23bb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_do5nf"]
texture = ExtResource("2_r8sxu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nllr5"]
bg_color = Color(0.133333, 0.12549, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojtxj"]
bg_color = Color(0.6, 0.898039, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psdgr"]
bg_color = Color(0.6, 0.898039, 0.313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="GO" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_68r0h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
scale = Vector2(4, 4)
theme_override_styles/panel = SubResource("StyleBoxTexture_do5nf")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 574.0
offset_right = 1025.0
offset_bottom = 606.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_colors/font_color = Color(0.6, 0.898039, 0.313726, 1)
theme_override_colors/font_pressed_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_hover_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_fonts/font = ExtResource("3_33sef")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_nllr5")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojtxj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_psdgr")
text = " Return to Menu "

[node name="ui_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hyx1v")

[node name="ui_interact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g23bb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 120.0
offset_right = 591.0
offset_bottom = 333.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 0.234886, 0.178821, 1)
theme_override_fonts/font = ExtResource("3_33sef")
theme_override_font_sizes/font_size = 20
text = "> You didn't risk it for Biscuit.
>  Luckily, the ship didn't explode and Biscuit
was saved.
> But the escape pod exploded. You were in it. 
> Yeah. 
> Next time, take the risk. "

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
